@@ -1,7 +1,10 @@
 package com.bremen.backend.domain.video.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import com.bremen.backend.domain.video.dto.MusicResponse;
@@ -10,6 +13,7 @@ import com.bremen.backend.domain.video.mapper.MusicMapper;
 import com.bremen.backend.domain.video.repository.MusicRepository;
 import com.bremen.backend.global.CustomException;
 import com.bremen.backend.global.response.ErrorCode;
+import com.bremen.backend.global.response.ListResponse;
 
 import lombok.RequiredArgsConstructor;
 
@@ -24,8 +28,12 @@ public class MusicServiceImpl implements MusicService {
 	}
 
 	@Override
-	public List<MusicResponse> searchMusicsByTitle(String title) {
-		List<Music> musics = musicRepository.findByTitleContaining(title);
-		return musics.stream().map(MusicMapper.INSTANCE::musicToMusicResponse).toList();
+	public ListResponse searchMusicsByTitle(String title, Pageable pageable) {
+		Page<Music> pages = musicRepository.findByTitleContaining(title, pageable);
+		List<MusicResponse> musics = pages.getContent()
+			.stream()
+			.map(MusicMapper.INSTANCE::musicToMusicResponse)
+			.collect(Collectors.toList());
+		return new ListResponse(musics, pages.getTotalElements(), pages.getPageable());
 	}
 }
